--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -23,7 +23,7 @@
             <a id="logo-container" href="#" class="brand-logo"></a>
             <ul class="right hide-on-med-and-down">
                <li>
-                  <a data-target="modal1" class="btn-small waves-effect waves-light orange modal-trigger">Login</a>
+                  <a data-target="modal1" class="btn-small waves-effect waves-light orange modal-trigger">{{username}}</a>
                </li>
             </ul>
             <ul id="nav-mobile" class="sidenav">
